# wb-link-bot

./: .env.example  .gitignore  pyproject.toml
app/: __main__.py  commands.py  settings.py
app/src/dialogs/handlers/: admin.py  user.py
app/src/dialogs/keyboards/: user.py
app/src/dialogs/state/: link.py
app/src/middleware/: db.py
app/src/services/: user.py
app/src/services/admin/: admin.py  texts.py
app/src/services/db/: base.py  models.py
app/src/services/db/dao/: base_dao.py  service_message_dao.py  user_dao.py
app/src/services/user/: link.py  texts.py  user.py
migrations/: env.py
migrations/versions/: 10ba048435aa_feat_create_tables.py
