[tool.poetry]
name = "aiogram3-template"
version = "0.1.0"
description = ""
authors = ["aldi <alkin.denis@gmail.com>"]
readme = "README.md"
packages = [{include = "aiogram3-template"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.0"
SQLAlchemy = "^2.0.29"
alembic = "^1.13.1"
aiogram = "^3.4.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
